// $Id: CHANGELOG.txt,v 1.117.2.11 2007/01/29 21:48:20 killes Exp $
Drupal 4.7.6, 2007-01-29
------------------------
- fixed security issue (code execution), see SA-2007-005

Drupal 4.7.5, 2007-01-05
------------------------
- fixed security issue (XSS), see SA-2007-001
- fixed security issue (DoS), see SA-2007-002

Drupal 4.7.4, 2006-10-18
------------------------
- fixed security issue (XSS), see SA-2006-024
- fixed security issue (CSRF), see SA-2006-025
- fixed security issue (Form action attribute injection), see SA-2006-026

Drupal 4.7.3, 2006-08-02
------------------------
- fixed security issue (XSS), see SA-2006-011

Drupal 4.7.2, 2006-06-01
------------------------
- fixed critical upload issue, see SA-2006-007
- fixed taxonomy XSS issue, see SA-2006-008
- fixed a variety of small bugs.

Drupal 4.7.1, 2006-05-24
------------------------
- fixed critical SQL issue, see SA-2006-005
- fixed a serious upgrade related bug.
- fixed a variety of small bugs.

Drupal 4.7.0, 2006-05-01
------------------------
- added free tagging support.
- added a site-wide contact form.
- theme system:
    * added the PHPTemplate theme engine and removed the Xtemplate engine.
    * converted the bluemarine theme from XTemplate to PHPTemplate.
    * converted the pushbutton theme from XTemplate to PHPTemplate.
- usability:
    * reworked the 'request new password' functionality.
    * reworked the node and comment edit forms.
    * made it easy to add nodes to the navigation menu.
    * added site 'offline for maintenance' feature.
    * added support for auto-complete forms (AJAX).
    * added support for collapsible page sections (JS).
    * added support for resizable text fields (JS).
    * improved file upload functionality (AJAX).
    * reorganized some settings pages.
    * added friendly database error screens.
    * improved styling of update.php.
- refactored the forms API.
    * made it possible to alter, extend or theme forms.
- comment system: