@@ -1,5 +1,5 @@
 <?php
-// $Id: poll.module,v 1.195.2.4 2007/01/04 20:28:41 killes Exp $
+// $Id: poll.module,v 1.195.2.5 2007/07/26 19:17:24 killes Exp $
 
 /**
  * @file
@@ -282,7 +282,9 @@ function poll_teaser($node) {
   $teaser = NULL;
   if (is_array($node->choice)) {
     foreach ($node->choice as $k => $choice) {
-      $teaser .= '* '. $choice['chtext'] .'\n';
+      if ($choice['chtext'] != '') {
+        $teaser .= '* '. check_plain($choice['chtext']) ."\n";
+      }
     }
   }
   return $teaser;
