@@ -1,5 +1,5 @@
 <?php
-// $Id: user.module,v 1.612.2.30 2007/07/02 17:24:38 killes Exp $
+// $Id: user.module,v 1.612.2.31 2007/07/26 19:17:24 killes Exp $
 
 /**
  * @file
@@ -699,7 +699,7 @@ function theme_user_profile($account, $fields) {
   $output .= theme('user_picture', $account);
   foreach ($fields as $category => $items) {
     if (strlen($category) > 0) {
-      $output .= '<h2 class="title">'. $category .'</h2>';
+      $output .= '<h2 class="title">'. check_plain($category) .'</h2>';
     }
     $output .= '<dl>';
     foreach ($items as $item) {
